--- a/recipes/spaghettiandmeatballs.html
+++ b/recipes/spaghettiandmeatballs.html
@@ -5,7 +5,6 @@
         <title></title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/spaghettiandmeatballs.html">Spaghetti and Meatballs</a>
+        <h1>Spaghetti and Meatballs</h1>
     </body>
 </html>
