--- a/recipes/spaghettiandmeatballs.html
+++ b/recipes/spaghettiandmeatballs.html
@@ -6,5 +6,21 @@
     </head>
     <body>
         <h1>Spaghetti and Meatballs</h1>
+        <img src="../img/spaghettiandmeatballs.jpeg" alt="Spaghetti and meatball dish" width="400">
+        <h2>Description</h2>
+        <p>An easy, low-cost spaghetti and meatball recipe with a simple tomato sauce.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tbsp olive oil</li>
+            <li>1 brown onion, chopped</li>
+            <li>1 garlic clove, finely chopped</li>
+            <li>1 tsp dried mix herbs</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat a large saucepan over a medium heat and add the olive oil.</li>
+            <li>Mix together the beef, garlic and herbs.</li>
+            <li>Heat a frying pan over a medium heat and add the olive oil.</li>
+        </ol>
     </body>
 </html>
