--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/spaghettiandmeatballs.html">Spaghetti and Meatballs</a>
+        <ul>
+            <li><a href="recipes/spaghettiandmeatballs.html">Spaghetti and Meatballs</a></li>
+            <li><a href="recipes/chickenkatsucurry.html">Chicken Katsu Curry</a></li>
+        </ul>
     </body>
 </html>
