Add more pictures to every page

--- a/recipes/chickenkatsucurry.html
+++ b/recipes/chickenkatsucurry.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Chicken Katsu Curry</h1>
         <img src="../img/chickenkatsucurry.jpeg" alt="Chicken Katsu Curry" width="400">
+        <img src="../img/chickenkatsucurry.jpeg" alt="Chicken Katsu Curry" width="400">
+        <img src="../img/chickenkatsucurry.jpeg" alt="Chicken Katsu Curry" width="400">
         <h2>Description</h2>
         <p>A low-cost and simple Japanese dish. The perfect midweek meal.</p>
         <h3>Ingredients</h3>
