--- a/recipes/spaghettiandmeatballs.html
+++ b/recipes/spaghettiandmeatballs.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Spaghetti and Meatballs</h1>
         <img src="../img/spaghettiandmeatballs.jpeg" alt="Spaghetti and meatball dish" width="400">
+        <img src="../img/spaghettiandmeatballs.jpeg" alt="Spaghetti and meatball dish" width="400">
+        <img src="../img/spaghettiandmeatballs.jpeg" alt="Spaghetti and meatball dish" width="400">
         <h2>Description</h2>
         <p>An easy, low-cost spaghetti and meatball recipe with a simple tomato sauce.</p>
         <h3>Ingredients</h3>
