--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h3>Odin Recipes</h3>
-        <ul>
-            <li><a href="recipes/spaghettiandmeatballs.html">Spaghetti and Meatballs</a></li>
-            <li><a href="recipes/chickenkatsucurry.html">Chicken Katsu Curry</a></li>
+        <h1 class="title">Odin Recipes</h1>
+        <ul class="recipe-list">
+            <li class="spaghetti"><a href="recipes/spaghettiandmeatballs.html"><img src="img/spaghettiandmeatballs.jpeg" alt="Spaghetti and Meatballs" width="400px"></a></li>
+            <li class="Katsu"><a href="recipes/chickenkatsucurry.html"><img src="img/chickenkatsucurry.jpeg" width="400px"></a></li>
         </ul>
     </body>
 </html>
